tests/lean/rflTacticErrors.lean.expected.out
rflTacticErrors.lean:29:30-29:33: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:30:30-30:33: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:37:45-37:48: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:38:45-38:48: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:50:31-50:34: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:51:31-51:34: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:58:46-58:49: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:59:46-59:49: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:71:32-71:35: error: rfl failed, no @[refl] lemma registered for relation
  Q'
rflTacticErrors.lean:72:32-72:35: error: rfl failed, no @[refl] lemma registered for relation
  R
rflTacticErrors.lean:74:47-74:50: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ true'' = true
rflTacticErrors.lean:75:47-75:50: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq true'' true
⊢ HEq true'' true
rflTacticErrors.lean:76:47-76:50: error: tactic 'rfl' failed, The lhs
  True''
is not definitionally equal to rhs
  True
⊢ True'' ↔ True
rflTacticErrors.lean:77:47-77:50: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ P true'' true
rflTacticErrors.lean:78:47-78:50: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ Q true'' true
rflTacticErrors.lean:79:47-79:50: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ Q' true'' true
rflTacticErrors.lean:80:47-80:50: error: tactic 'rfl' failed, The lhs
  true''
is not definitionally equal to rhs
  true
⊢ R true'' true
rflTacticErrors.lean:83:31-83:34: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ false = true
rflTacticErrors.lean:84:31-84:34: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq false true
⊢ HEq false true
rflTacticErrors.lean:85:31-85:34: error: tactic 'rfl' failed, The lhs
  False
is not definitionally equal to rhs
  True
⊢ False ↔ True
rflTacticErrors.lean:86:31-86:34: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ P false true
rflTacticErrors.lean:87:31-87:34: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q false true
rflTacticErrors.lean:88:31-88:34: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q' false true
rflTacticErrors.lean:89:31-89:34: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ R false true
rflTacticErrors.lean:91:46-91:49: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ false = true
rflTacticErrors.lean:92:46-92:49: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq false true
⊢ HEq false true
rflTacticErrors.lean:93:46-93:49: error: tactic 'rfl' failed, The lhs
  False
is not definitionally equal to rhs
  True
⊢ False ↔ True
rflTacticErrors.lean:94:46-94:49: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ P false true
rflTacticErrors.lean:95:46-95:49: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q false true
rflTacticErrors.lean:96:46-96:49: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ Q' false true
rflTacticErrors.lean:97:46-97:49: error: tactic 'rfl' failed, The lhs
  false
is not definitionally equal to rhs
  true
⊢ R false true
rflTacticErrors.lean:101:27-101:30: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq true 1
⊢ HEq true 1
rflTacticErrors.lean:102:42-102:45: error: tactic 'apply' failed, failed to unify
  HEq ?a ?a
with
  HEq true 1
⊢ HEq true 1
rflTacticErrors.lean:109:30-109:33: error: tactic 'rfl' failed, The lhs
  true
is not definitionally equal to rhs
  false
⊢ S true false
rflTacticErrors.lean:110:45-110:48: error: tactic 'rfl' failed, The lhs
  true
is not definitionally equal to rhs
  false
⊢ S true false
rflTacticErrors.lean:111:30-111:33: error: unsolved goals
case a
⊢ true = true
rflTacticErrors.lean:112:45-112:48: error: unsolved goals
case a
⊢ true = true
rflTacticErrors.lean:113:30-113:33: error: unsolved goals
case a
⊢ false = true
rflTacticErrors.lean:114:45-114:48: error: unsolved goals
case a
⊢ false = true
